[package]
name = "SharedTierList"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
http = "1.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
axum-core = "0.5.5"
thiserror = "2.0.12"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
headers = "0.4.0"
argon2 = "0.5.3"
password-hash = "0.5.0"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
futures = "0.3.31"
rand = "0.8"
mongodb = "3.2.2"
sha2 = "0.10.9"
hex = "0.4.3"
log = "0.4.28"
